--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -339,21 +339,10 @@ textarea {
         }
 
         svg {
-            width: 12px;
-            height: 12px;
+            width: 14px;
+            height: 14px;
             vertical-align: middle;
-            padding: 4px 6px 6px;
-            transition: all $transition-duration-default $transition-ease-default;
-        }
-
-        &:has(svg) {
-            &:hover {
-                svg {
-                    width: 16px;
-                    height: 16px;
-                    padding: 2px 4px 4px;
-                }
-            }
+            padding-left: 6px;
         }
     }
 
