--- a/app/frontend/assets/styles/components/_details-summary.scss
+++ b/app/frontend/assets/styles/components/_details-summary.scss
@@ -44,8 +44,9 @@ details {
             position: absolute;
             top: calc(50% - 10px);
             left: 16px;
-            scale: 1 1;
-            transition: scale $transition-duration-default $transition-ease-default;
+            // scale: 1 1;
+            transform: rotate(0deg);
+            transition: transform $transition-duration-default $transition-ease-default;
         }
 
         .cta--summary {
@@ -58,7 +59,8 @@ details {
     &[open] {
         > summary {
             &::before {
-                scale: 1 -1;
+                // scale: 1 -1;
+                transform: rotate(-180deg);
                 transform-origin: center;
             }
 
