--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -28,9 +28,10 @@ $blue-light: #0079b8;
 $blue-dark: #083968;
 $greenblue: #00846d;
 $red-tint02: #d70d0d;
-$yellow-200: #fff9eb;
+$yellow-200: #fff7e5;
 $yellow-400: #fff1ce;
 $red-200: #fcf0f0;
+$red-300: #ffebeb;
 $red-400: #ffd5d5;
 $red-900: #d22d1f;
 $blue-100: #f7f9fa;
@@ -41,7 +42,7 @@ $gray-200: #eaeaea;
 $gray-400: #b7bdc7;
 $gray-600: #7f838a;
 $gray-800: #666666;
-$purple-200: #f5f0fa;
+$purple-200: #f5ebff;
 $purple-800: #9e7ebc;
 
 $neutral-900: #244048;
