--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -92,7 +92,7 @@
                                                     <p>{{ eerste_taakgebeurtenis.omschrijving_intern }}</p>
                                                     <small>{{ eerste_taakgebeurtenis.aangemaakt_op|to_datetime|naturalday_with_time_or_timesince }}</small>
                                                 {% else %}
-                                                    <p class="help-text">Er is nog geen opmerking toegevoegd</p>
+                                                    <p class="help-text">Er is geen opmerking toegevoegd.</p>
                                                 {% endif %}
                                             </div>
                                         </li>
