--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -96,7 +96,8 @@
             font-weight: 700;
 
             small {
-                font-size: 0.667rem;
+                font-size: 0.778rem;
+                font-weight: 400;
             }
 
             .wrapper {
