--- a/app/apps/beheer/templates/beheer/beheer.html
+++ b/app/apps/beheer/templates/beheer/beheer.html
@@ -25,6 +25,12 @@
             <a href="{% url 'standaard_externe_omschrijving_lijst' %}">Standaard teksten</a>
         </li>
         <li>
+            <a href="{% url 'specificatie_lijst' %}">Specificaties</a>
+        </li>
+        <li>
+            <a href="{% url 'melding_afhandelreden_lijst' %}">Melding afhandelredenen</a>
+        </li>
+        <li>
             <a href="{% url 'release_note_lijst' %}">Berichten</a>
         </li>
     </ul>
