--- a/app/apps/main/templates/melding/detail/bijlagen.html
+++ b/app/apps/main/templates/melding/detail/bijlagen.html
@@ -15,10 +15,10 @@
                         tabindex="0"
                         data-image-slider-target="image"
                         data-image-uuid="{{ bijlage.uuid }}">
-                        <div class="image">
-                            <img src="{{ bijlage.afbeelding_relative_url|mor_core_url }}" data-action="click->modal#openModal" data-modal-content-param='
+                        <div class="image" data-action="click->modal#openModal" data-modal-content-param='
                             {% include "melding/detail/bijlagen_modal_content.html" with bijlage=bijlage only %}
                             ' data-modal-css-class-param="modal-dialog--full">
+                            <img src="{{ bijlage.afbeelding_relative_url|mor_core_url }}" >
                             {% if bijlage.oorsprong != "melder" %}
                                 <span class="tag--in-image">
                                     <span>{{ bijlage.label }}</span>
