--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -1318,10 +1318,18 @@ form.taken-aanmaken {
                     -webkit-line-clamp: 3;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    margin-right: 6px;
+
+                    &:empty {
+                        margin-right: -1px;
+                    }
                 }
 
                 button {
                     align-self: flex-end;
+                    svg {
+                        padding-left: 0;
+                    }
                 }
             }
 
